[package]
name = "ray-marching-opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
gl = "0.14.0"
glm = "0.2.3"

# The gui only works with winit and glinum with specific dependency versions
glium = "0.34" 
winit = "0.29" 
egui_glium = "0.26.2"
egui = "0.26.2"
egui-snarl = "0.3.0"